--- a/pom.xml
+++ b/pom.xml
@@ -1375,6 +1375,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.3</version>
             </plugin>
 
 
